--- a/resume.css
+++ b/resume.css
@@ -185,7 +185,7 @@ a:hover {
     border: none;
     font-size: 1.5rem;
     cursor: pointer;
-    color: #333;
+    color: #dbe1ea;
 }
 
 @media (max-width: 768px) {
